--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,9 @@ body {
   font-family: sans-serif;
   background-color: rgb(35, 7, 67);
 }
+p, h1, h2, h3, h4, h5, a{
+  font-family: 'Victor Mono', monospace;
+}
+
 
 
