--- a/src/card/card.css
+++ b/src/card/card.css
@@ -7,4 +7,19 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    
+}
+
+.grid-item {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 390px;
+
+}
+
+.card-img {
+    width: 100%;
+    border-radius: 5px;
+    height: auto;
 }
