--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body { 
   font-family:  'Victor Mono', monospace;
-  font-size: 20px;
+  font-size: 14px;
   color: white;
   max-width: 1300px;
   margin: 0 auto;
@@ -13,6 +13,13 @@ body {
 }
 p, h1, h2, h3, h4, h5, a{
   font-family: 'Victor Mono', monospace;
+}
+h3{
+  font-weight: 500;
+  font-size: 25px;
+  font-weight: thin;
+  letter-spacing: 2px;
+  color: rgb(0, 255, 34);
 }
 
 
