--- a/src/containerHome/conteinerHome.css
+++ b/src/containerHome/conteinerHome.css
@@ -1,3 +1,4 @@
+
 .main-container{
     margin-top: 50px;
     margin-bottom: 50px;
@@ -13,6 +14,7 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .parts-container{
@@ -21,106 +23,120 @@
     align-items: center;
     background: linear-gradient(90deg, rgb(31, 7, 58) 0%, rgba(28,6,54,1) 100%);
     border-radius: 30px;
-    width: 100%;
+    min-width: 300px ;
     margin: 5px;
     padding: 20px;
+    max-width: 500px;
+    gap: 20px;
 }
 
 .card-img-home{
     max-width: 210px;
-    border-radius: 30px;
+    border-radius: 10px;
 }
-.img-rectangle{
+.conteiner-row{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 40px;
+    align-items: center;
+    width: 100%;
+    justify-content: space-around;
+}
+.card-button {
+    display: inline-block;
+    transition: all 0.2s ease-in;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    color: #ffffff;
+    padding: 0.7em 1.7em;
+    cursor: pointer;
+    font-size: 12px;
+    border-radius: 0.5em;
+    background: rgb(31, 7, 58);
+    border: 1px solid rgb(0, 255, 34);
+    box-shadow: 6px 6px 12px #220f57, -6px -6px 12px #220f57;
+  }
   
-    object-fit: fill;
-max-height: 40%;
+  .card-button:active {
+    color: #666;
+    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+  }
   
-}
-
-.card-button{
-
-    width: 10em;
-  position: relative;
-  height: 3.5em;
-  border: 3px ridge rgb(0, 255, 34);
-  outline: none;
-  background-color: transparent;
-  color: white;
-  transition: 1s;
-  border-radius: 0.3em;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-
-}
-
-.card-button::after{
+  .card-button:before {
     content: "";
     position: absolute;
-    top: -10px;
-    left: 3%;
-    width: 95%;
-    height: 40%;
-    background-color: rgb(31, 7, 58);
-    transition: 0.5s;
-    transform-origin: center;
-}
-
-.card-button::before{
+    left: 50%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.25);
+    top: 100%;
+    width: 140%;
+    height: 180%;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
+  }
+  
+  .card-button:after {
     content: "";
-  transform-origin: center;
-  position: absolute;
-  top: 80%;
-  left: 3%;
-  width: 95%;
-  height: 40%;
-  background-color: rgb(31, 7, 58);
-  transition: 0.5s;
-}
-
-.card-button:hover::before, .card-button:hover::after {
-    transform: scale(0)
+    position: absolute;
+    left: 55%;
+    transform: translateX(-50%) scaleY(1) scaleX(1.45);
+    top: 180%;
+    width: 160%;
+    height: 190%;
+    background-color:rgb(66, 14, 124);
+    border-radius: 50%;
+    display: block;
+    transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+    z-index: -1;
   }
-
+  
   .card-button:hover {
-    box-shadow: inset 0px 0px 25px rgb(0, 255, 34);
+    color: #ffffff;
+    border: 1px solid rgb(66, 14, 124);
+  }
+  
+  .card-button:hover:before {
+    top: -35%;
+    background-color: rgb(66, 14, 124);
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+  }
+  
+  .card-button:hover:after {
+    top: -45%;
+    background-color: rgb(66, 14, 124);
+    transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+  }
+  .svgSmall{
+    max-width: 100px;
+  }
+  .svgSmall2{
+    max-width: 250px;
+  }
+  .svgSmall3{
+    max-width: 200px;
+  }
+  .iconSmall{
+    max-width: 50px;
+  }
+  .icons{
+    display: flex;
+    gap: 20px;
   }
 
-/*
-.parts-container{
+  .parts-container2{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
-    align-content: center;
-}
-
-.card-home{
-    background: rgb(57,14,107);
-    background: linear-gradient(90deg, rgb(31, 7, 58) 0%, rgba(28,6,54,1) 100%);
-    border-color: rgb(0, 255, 34);
+    background: linear-gradient(90deg, rgb(31, 7, 58) 0%, rgba(28, 6, 54, 1) 100%);
     border-radius: 30px;
-    border-width: 1px;
+    min-width: 300px;
+    margin: 5px;
     padding: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
-    gap: 20px;
     max-width: 500px;
-}
-
-.card-img-home{
-    max-width: 210px;
-    border-radius: 30px;
-    height: auto;
-}
-
-.square-box{
-
-    aspect-ratio: 1;
-    max-width: 210px;
-}*/
+    gap: 40px;
+    justify-content: center;
+  }
